examples/test/testpolicy9252.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9252
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key22: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value18
          key43: value30
          key47: value25
      podSelector:
        matchLabels:
          key40: value0
          key47: value12
